<package>
  <name>zeroconf_jmdns_suite</name>
  <version>0.3.0</version>
  <description>
    An implementation of zeroconf in pure java.
  </description>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <license>Apache 2.0</license>
  <url type="website">http://ros.org/wiki/zeroconf_jmdns_suite</url>
  <url type="repository">https://github.com/rosjava/zeroconf_jmdns_suite</url>
  <url type="bugtracker">https://github.com/rosjava/zeroconf_jmdns_suite/issues</url>
  <author email="d.stonier@gmail.com">Daniel Stonier</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rosjava_build_tools</build_depend>
  <build_depend>rosjava_bootstrap</build_depend>
  <run_depend>rosjava_build_tools</run_depend>
  <run_depend>rosjava_bootstrap</run_depend>
</package>

