##############################################################################
# CMake
##############################################################################

cmake_minimum_required(VERSION 2.8.3)
project(zeroconf_jmnds)

##############################################################################
# Catkin
##############################################################################

find_package(catkin REQUIRED)
catkin_rosjava_setup(install)
catkin_package()
