<package>
  <name>zeroconf_jmdns</name>
  <version>0.1.0</version>
  <description>
    An implementation of zeroconf in pure java.
  </description>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <license>Apache 2.0</license>
  <url type="website">http://ros.org/wiki/zeroconf_jmnds</url>
  <url type="repository">https://github.com/ros-java/rosjava_extras</url>
  <url type="bugtracker">https://github.com/ros-java/rosjava_extras/issues</url>
  <author email="d.stonier@gmail.com">Daniel Stonier</author>
  <author email="kattyokaccho3616@gmail.com">Kazuto Murase</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rosjava_tools</build_depend>
  <build_depend>rosjava_gradle</build_depend>
</package>
